--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +24,14 @@
 
         <activity
             android:name=".TrimmerVideoActivity"
+            android:launchMode="singleTop"></activity>
+
+        <activity
+            android:name=".TrimmerVideoByCustomConfigActivity"
+            android:launchMode="singleTop"></activity>
+
+        <activity
+            android:name=".TrimmerVideoByCustomDefaultConfigActivity"
             android:launchMode="singleTop"></activity>
 
     </application>
