--- a/videotrimmerlibrary/build.gradle
+++ b/videotrimmerlibrary/build.gradle
@@ -15,6 +15,14 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+
+    sourceSets.main {
+        assets.srcDirs = ['assets']
+        jni.srcDirs = [] //disable automatic ndk-build
+        jniLibs.srcDirs = ['libs']
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
